# object_detection

./: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_generated/installspace/: object_detection.pc  object_detectionConfig.cmake
src/: canny.cpp  i_c_n.cpp  image_converter_node.cpp
